# stencil2

./: .gitignore  Cargo.lock-ignored-for-cargo-msrv  Cargo.toml  README.md  build.rs  changelog.md  manual.md
.cargo/: actions_config.toml  config.toml
.github/: actions_config.toml  dependabot.yml  renovate.json
.github/workflows/: brew.yml  build.yml  cargo-msrv.yaml  cargo-upgrade.yaml  check.yml  virus_total.yml
assets/icons/: icon.py
icons/: icon.py
old/: main.rs
old/component/: circle.rs  mod.rs  pla2.rs  skin.rs
old/component/actions/: mod.rs  rendering.rs  selecting.rs
old/component/panels/: mod.rs
old/component/tools/: creating.rs  deleting.rs  mod.rs  node_editing.rs
old/history/: history_viewer.rs
old/info_windows/: info.rs  licenses.rs  mod.rs
old/init/: compat.rs  load_assets.rs  load_fonts.rs  load_skin.rs  spawn_camera.rs  unzip_assets.rs
old/keymaps/: mod.rs  settings.rs  settings_editor.rs
old/misc_config/: settings.rs
old/project/: events.rs  mod.rs  project_editor.rs
old/tile/: mod.rs  tile_coord.rs
old/ui/map/: settings_editor.rs  tiles.rs  zoom.rs
old/ui/panel/: dock.rs  status.rs  toolbar.rs
old/window/: settings_editor.rs
src/: action.rs  component_editor.rs  coord_conversion.rs  dirs_paths.rs  error_handling.rs  event.rs  file.rs  inspector.rs  load_save.rs  logging.rs  main.rs  map.rs  misc.rs  mode.rs  panic.rs  pointer.rs  setup.rs  state.rs  tile.rs  types.rs  update_checker.rs  utils.rs
src/actions/: create_point.rs  mod.rs
src/component/: bundle.rs  circle.rs  component_editor.rs  component_list.rs  mod.rs  pla2.rs  skin.rs
src/component/actions/: hovering.rs  mod.rs  moving.rs  rendering.rs  selecting.rs  undo_redo.rs
src/component/panels/: component_editor.rs  component_list.rs  mod.rs
src/component/tools/: creating.rs  deleting.rs  node_editing.rs
src/component_actions/: clipboard.rs  context_menu.rs  create.rs  delete.rs  event.rs  mod.rs  move.rs  moving.rs  paint.rs  select.rs  selecting.rs  undo_redo.rs
src/component_tools/: creating.rs  deleting.rs  mod.rs  node_editing.rs
src/cursor/: mod.rs  mouse_events.rs
src/editor/: component_panel.rs  create_component.rs  creating_component.rs  cursor.rs  delete_component.rs  deleting_component.rs  menu.rs  mod.rs  selecting_component.rs  shadow.rs  tilemap.rs  toolbar.rs  ui.rs
src/editor/actions/: mod.rs  mouse_events.rs  selecting.rs
src/editor/bundles/: component.rs  mod.rs  tile.rs
src/editor/component_actions/: mod.rs  moving.rs  selecting.rs
src/editor/component_tools/: creating.rs  deleting.rs  mod.rs  node_editing.rs
src/editor/cursor/: mod.rs  mouse_events.rs
src/editor/menu_actions/: info.rs  mod.rs  quit.rs
src/editor/menu_actions/file/: load_ns.rs  mod.rs  save_ns.rs
src/editor/modes/: creating.rs  deleting.rs  mod.rs  moving.rs  selecting.rs
src/editor/tilemap/: mod.rs  mouse_nav.rs  tile.rs  utils.rs
src/editor/ui/: component_panel.rs  menu.rs  popup.rs  toolbar.rs
src/error/: log.rs  panic.rs
src/history/: events.rs  history_viewer.rs  mod.rs
src/hotkeys/: mod.rs
src/info_windows/: changelog.rs  info.rs  licenses.rs  manual.rs  mod.rs  quit.rs
src/init/: compat.rs  load_assets.rs  load_fonts.rs  load_skin.rs  mod.rs  set_icon.rs  spawn_camera.rs  unzip_assets.rs  welcome.rs
src/keymaps/: key_list.rs  mod.rs  settings.rs  settings_editor.rs
src/load_save/: load_ns.rs  mod.rs  save_ns.rs
src/map/: basemap.rs  context_menu.rs  mod.rs  settings.rs  state.rs  tile_coord.rs  toolbar.rs
src/menu_actions/: changelog.rs  info.rs  mod.rs  quit.rs
src/menu_actions/file/: load_ns.rs  mod.rs  save_ns.rs
src/misc_config/: mod.rs  settings.rs  settings_editor.rs
src/notification/: mod.rs  viewer.rs
src/pla2/: bundle.rs  component.rs  mod.rs  skin.rs
src/project/: component_editor.rs  component_list.rs  event.rs  events.rs  history.rs  history_viewer.rs  mod.rs  pla3.rs  project_editor.rs  skin.rs
src/rendering/: mod.rs  mouse_nav.rs  tile.rs  utils.rs
src/settings/: misc_settings.rs  miscellaneous.rs  mod.rs
src/shortcut/: mod.rs  settings.rs
src/tile/: bundle.rs  mod.rs  settings.rs  tile_coord.rs  utils.rs  zoom.rs
src/tilemap/: bundle.rs  mod.rs  mouse_nav.rs  settings.rs  tile.rs  tile_coord.rs  utils.rs  zoom.rs
src/types/: pla.rs  skin.rs  tile_coord.rs  zoom.rs
src/ui/: component_panel.rs  dock.rs  file_dialogs.rs  file_explorer.rs  menu.rs  menu_bar.rs  mod.rs  notif.rs  popup.rs  status.rs  toolbar.rs
src/ui/cursor/: mod.rs  mouse_events.rs  mouse_pos.rs
src/ui/map/: mod.rs  mouse_nav.rs  settings.rs  settings_editor.rs  tiles.rs  zoom.rs
src/ui/notif/: mod.rs  viewer.rs
src/ui/panel/: component_editor.rs  component_panel.rs  dock.rs  menu.rs  mod.rs  status.rs  tilemap.rs  toolbar.rs
src/ui/panel2/: component_panel.rs  menu.rs
src/ui/tilemap/: mod.rs  mouse_nav.rs  settings.rs  settings_editor.rs  settings_window.rs  tile.rs  window.rs
src/window/: mod.rs  settings.rs  settings_editor.rs
src/window_settings/: mod.rs  settings.rs  settings_editor.rs  window.rs
