[package]
name = "stencil2"
version = "2.2.3"
edition = "2021"
description = "Map editor for MRT Map data"
authors = ["7d <i.third.7d@protonmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/mrt-map/stencil2"
readme = "README.md"
keywords = ["stencil", "stencil2", "mrt-map", "mrt-mapping-services"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "png",
    "trace",
    "x11",
    "wayland",
    "serialize",
    "asset_processor",
    "multi_threaded",
]

[dependencies]
# bevy_mouse_tracking = { version = "0.8.0", package = "bevy_mouse_tracking_plugin" }
bevy_mouse_tracking = { git = "https://github.com/iiiii7d/bevy-mouse-tracking", package = "bevy_mouse_tracking_plugin", branch = "bevy-0-14" }
bevy_prototype_lyon = { git = "https://github.com/iiiii7d/bevy_prototype_lyon" }
bevy_mod_picking = { version = "0.20.1", default-features = false, features = [
    "backend_raycast",
    "selection",
] }
bevy_asset_loader = "0.21.0"
bevy-inspector-egui = "0.25.1"

bevy_egui = "0.28.0"
egui_commonmark = "0.17.0"
egui_extras = "0.28.1"
egui_dock = "0.13.0"
egui-file-dialog = "0.6.0"
egui-notify = "0.15.0"

tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
color-spantrace = "0.2.1"
tracing-error = "0.2.0"

surf = "2.3.2"
async-fs = "2.1.2"
futures-lite = "2.3.0"
async-lock = "3.4.0"
async-executor = "1.13.0"

backtrace = "0.3.73"
color-backtrace = "0.6.1"

serde = { version = "1.0.204", features = ["derive"] }
rmp-serde = "1.3.0"
toml = "0.8.16"
serde_json = "1.0.120"

dirs = "5.0.1"
zip = "2.1.5"
bimap = { version = "0.6.3", features = ["serde"] }
image = "0.25.2"
winit = "0.30.4"
chrono = "0.4.38"

hex_color = { version = "3.0.0", features = ["serde"] }
base64-serde = "0.7.0"
base64 = "0.22.1"
itertools = "0.13.0"
rand = "0.8.5"
lazy-regex = "3.2.0"
once_cell = "1.19.0"
enum_dispatch = "0.3.13"
eyre = "0.6.12"

license-retriever = { git = "https://github.com/MRT-Map/license-retriever" }

[build-dependencies]
license-retriever = { git = "https://github.com/MRT-Map/license-retriever" }
#color-eyre = "0.6.3"
eyre = "0.6.12"
zip = "2.1.5"
embed-resource = "2.4.3"

[profile.dev.package."*"]
opt-level = 3
[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "stencil2"
identifier = "io.github.mrt-map.stencil2"
icon = ["icons/icon_*.png"]
