[package]
name = "stencil2"
version = "2.2.9"
edition = "2021"
description = "Map editor for MRT Map data"
authors = ["MRT Mapping Services", "7d <i.third.7d@protonmail.com>"]
license = "GPL-3.0-only"
homepage = "https://mrt-map.github.io/stencil2"
repository = "https://github.com/mrt-map/stencil2"
documentation = "https://github.com/MRT-Map/stencil2/wiki"
readme = "README.md"
keywords = ["stencil", "stencil2", "mrt", "mrt-map", "mrt-mapping-services"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.16.0"
default-features = false
features = [
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_picking",
    "bevy_window",
    "bevy_mesh_picking_backend",
    "png",
    "trace",
    "x11",
    "wayland",
    "serialize",
    "asset_processor",
    "multi_threaded",
]

[dependencies]
bevy_prototype_lyon = { git = "https://github.com/Nilirad/bevy_prototype_lyon", branch = "v0.14-update" }
bevy_asset_loader = "0.23.0-rc.3"
bevy-inspector-egui = "0.31.0"

bevy_egui = "0.34.1"
egui_commonmark = "0.20.0"
egui_extras = "0.31.1"
egui_dock = { version = "0.16.0", features = ["serde"] }
egui-file-dialog = "0.9.0"
egui-notify = "0.19.0"

tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
color-spantrace = "0.2.1"
tracing-error = "0.2.1"

surf = "2.3.2"
async-fs = "2.1.2"
futures-lite = "2.6.0"
async-lock = "3.4.0"
async-executor = "1.13.2"

backtrace = "0.3.74"
color-backtrace = "0.7.0"

serde = { version = "1.0.219", features = ["derive"] }
rmp-serde = "1.3.0"
serde_json = "1.0.140"
toml = "0.8.22"

dirs = "6.0.0"
zip = "2.6.1"
image = "0.25.6"
winit = "0.30.10"
chrono = "0.4.41"

hex_color = { version = "3.0.0", features = ["serde"] }
semver = "1.0.26"
base64-serde = "0.8.0"
base64 = "0.22.1"
itertools = "0.14.0"
rand = "0.9.1"
lazy-regex = { git = "https://github.com/Rastler3D/lazy-regex", branch = "use-std-lazylock" }
enum_dispatch = "0.3.13"
eyre = "0.6.12"

license-retriever = "1.1.0"

[build-dependencies]
license-retriever = "1.1.0"
#color-eyre = "0.6.3"
eyre = "0.6.12"
zip = "2.6.1"
embed-resource = "3.0.2"

#[profile.dev.package."*"]
#opt-level = 2
#[profile.dev]
#opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "stencil2"
identifier = "io.github.mrt-map.stencil2"
icon = ["icons/icon_*.png"]

[lints.rust]
future-incompatible = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"

missing_errors_doc = { level="allow", priority = 1 }
missing_panics_doc = { level="allow", priority = 1 }
cast_precision_loss = { level="allow", priority = 1 }
cast_possible_truncation = { level="allow", priority = 1 }
module_name_repetitions = { level="allow", priority = 1 }
multiple_crate_versions = { level="allow", priority = 1 }

allow_attributes = "warn"
#arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
#missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
string_to_string = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

type_complexity = { level="allow", priority = 1 }
too_many_lines = { level="allow", priority = 1 }
too_many_arguments = { level="allow", priority = 1 }
