[package]
name = "stencil3"
version = "3.0.0"
edition = "2024"
description = "Map editor for MRT Map data"
authors = ["MRT Mapping Services", "7d <i.third.7d@protonmail.com>"]
license = "GPL-3.0-only"
homepage = "https://mrt-map.github.io/stencil2"
repository = "https://github.com/mrt-map/stencil2"
documentation = "https://github.com/MRT-Map/stencil2/wiki"
readme = "README.md"
keywords = ["stencil", "stencil3", "mrt", "mrt-map", "mrt-mapping-services"]
categories = ["games"]
rust-version = "1.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "=0.33.3", features = ["serde"] }
eframe = { version = "=0.33.3", features = ["persistence"] }
egui_commonmark = "=0.22.0"
egui_extras = { version = "=0.33.3", features = ["http", "all_loaders"] }
egui_dock = { version = "=0.18.0" , features = ["serde"] }
egui-file-dialog = "=0.12.0"
egui-notify = "=0.21.0"

tracing = "=0.1.44"
tracing-appender = "=0.2.4"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
color-spantrace = "=0.3.0"
tracing-error = "=0.2.1"

surf = "=2.3.2"
async-fs = "=2.2.0"
futures-lite = "=2.6.1"
async-lock = "=3.4.2"
async-executor = { version = "=1.13.3", features = ["static"] }

backtrace = "=0.3.76"
color-backtrace = "=0.7.2"

serde = { version = "=1.0.228", features = ["derive"] }
rmp-serde = "=1.3.0"
serde_json = "=1.0.145"
toml = "=0.9.10"

dirs = "=6.0.0"
zip = "=7.0.0"
image = "=0.25.9"
winit = "=0.30.12"
chrono = "=0.4.42"

bimap = { version = "=0.6.3", features = ["serde"] }
indexmap = "=2.12.1"
strum = { version = "=0.27.2", features = ["derive"] }
geo = { version = "=0.32.0", features = ["use-serde"] }
lru = "=0.16.2"
semver = "=1.0.27"
base64-serde = "=0.8.0"
base64 = "=0.22.1"
itertools = "=0.14.0"
rand = "=0.9.2"
lazy-regex = { git = "https://github.com/Rastler3D/lazy-regex", branch = "use-std-lazylock" }
enum_dispatch = "=0.3.13"
eyre = "=0.6.12"
duplicate = "=2.0.1"

license-retriever = "=1.1.2"

[build-dependencies]
license-retriever = "=1.1.2"
#color-eyre = "0.6.3"
eyre = "=0.6.12"
zip = "=7.0.0"
embed-resource = "=3.0.6"

#[profile.dev.package."*"]
#opt-level = 2
#[profile.dev]
#opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "stencil3"
identifier = "io.github.mrt-map.stencil3"
icon = ["icons/icon_*.png"]

[lints.rust]
future-incompatible = "deny"

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
nursery = "warn"

missing_errors_doc = { level="allow", priority = 1 }
missing_panics_doc = { level="allow", priority = 1 }
cast_precision_loss = { level="allow", priority = 1 }
cast_possible_truncation = { level="allow", priority = 1 }
module_name_repetitions = { level="allow", priority = 1 }
multiple_crate_versions = { level="allow", priority = 1 }
cognitive_complexity = { level="allow", priority = 1 }

allow_attributes = "warn"
#arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_asserts_for_indexing = "warn"
#missing_inline_in_public_items = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
semicolon_inside_block = "warn"
str_to_string = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

type_complexity = { level="allow", priority = 1 }
too_many_lines = { level="allow", priority = 1 }
too_many_arguments = { level="allow", priority = 1 }
needless_pass_by_value = { level="allow", priority = 1 }
implicit_hasher = {level = "allow", priority = 1}
